--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint": "^8.11.0"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "openpgp": "^5.2.1"
   },
   "config": {
     "forge": {
